syntax = "proto3";

package oauth;

option java_multiple_files = true;
option java_package = "com.hna.rest.oauth";
option java_outer_classname = "GrpcOAuth";

service OAuth {
    rpc GetAccessToken (OAuthRequest) returns (OAuthResponse) {
    }
}

message OAuthRequest {
    string grant_type = 1;
    string client_id = 2;
    string client_secret = 3;
    string scope = 4;
    string token = 5;
    string username = 6;
    string password = 7;
}

message OAuthResponse {
    string access_token = 1;
    string token_type = 2;
    int64 expires_in = 3;
}
